src/backends/meta-dnd-private.h
@@ -29,6 +29,7 @@ gboolean meta_dnd_handle_xdnd_event (MetaBackend    *backend,
 
 #ifdef HAVE_WAYLAND
 void meta_dnd_wayland_handle_begin_modal (MetaCompositor *compositor);
+void meta_dnd_wayland_handle_end_modal   (MetaCompositor *compositor);
 #endif
 
 #endif /* META_DND_PRIVATE_H */
